k8s/ping.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-deployment
  labels:
    app: ping
spec:
  replicas: 6
  selector:
    matchLabels:
      app: ping
  template:
    metadata:
      labels:
        app: ping
    spec:
      containers:
      - name: ping
        image: ghcr.io/evandigby/ping:latest
        resources:
          requests:
            memory: 32Mi
            cpu: 100m
          limits:
            memory: 64Mi
            cpu: 500m
