k8s/pong.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pong-deployment
  labels:
    app: pong
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pong
  template:
    metadata:
      labels:
        app: pong
    spec:
      containers:
      - name: pong
        image: ghcr.io/evandigby/pong:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 32Mi
            cpu: 100m
          limits:
            memory: 64Mi
            cpu: 500m
