k8s/pong.service.yml
apiVersion: v1
kind: Service
metadata:
  name: pong
spec:
  selector:
    app: pong
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
