k8s/pong.ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pong
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: pong.6c8f7a4aadf945d0a00f.eastus.aksapp.io
    http:
      paths:
      - backend:
          serviceName: pong
          servicePort: 80
        path: /
